# as_main

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  implement_structure.py  mypy.ini  project_structure.md  pyproject.toml  update_imports.py
.github/: README.md
.github/workflows/: README.md  python-lint-build.yml  python-tests.yml
docs/: architecture_overview.md  implementation_plan.md  project_overview.md
docs/guidelines/: security_guidelines.md
docs/specs/: ai_agent_backend_spec.md  ai_agent_spec.md  data_schema_spec.md
docs/templates_and_simulations/: admin_simulation_log.md  agent_simulation_log.md  promp_templates.md
docs/tools/: admin_tool_testing_guidelines.md  tool_registry.md  tool_testing.md
tshirt_fulfillment/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pytest.ini  requirements.txt  setup.py
tshirt_fulfillment/adapters/services/: admin_services.py  design_service.py  external_services.py
tshirt_fulfillment/config/: settings.py
tshirt_fulfillment/core/domain/: admin.py  order.py
tshirt_fulfillment/core/use_cases/: design_generator.py  order_processor.py
tshirt_fulfillment/interfaces/api/: fastapi_app.py
tshirt_fulfillment/src/: __init__.py
tshirt_fulfillment/src/adapters/services/: admin_services.py  design_service.py  external_services.py
tshirt_fulfillment/src/config/: settings.py
tshirt_fulfillment/src/core/: constants.py
tshirt_fulfillment/src/core/domain/: admin.py  agent.py  design.py  order.py  tools.py
tshirt_fulfillment/src/core/repositories/: __init__.py  admin_repository.py  agent_repository.py  design_repository.py  order_repository.py
tshirt_fulfillment/src/core/use_cases/: admin_dashboard.py  agent_service.py  design_generator.py  order_processor.py
tshirt_fulfillment/src/interfaces/api/: dependencies.py  fastapi_app.py
tshirt_fulfillment/src/interfaces/api/routes/: admin_routes.py  order_routes.py
tshirt_fulfillment/tests/: conftest.py
tshirt_fulfillment/tests/integration/: conftest.py  test_order_flow.py
tshirt_fulfillment/tests/regression/: README.md  conftest.py  test_admin_regression.py  test_design_regression.py  test_order_regression.py
tshirt_fulfillment/tests/unit/: README.md  conftest.py
tshirt_fulfillment/tests/unit/domain/: test_design.py  test_order.py
tshirt_fulfillment/tests/unit/integration/: README.md  conftest.py  test_order_flow.py
tshirt_fulfillment/tests/unit/regression/: README.md  conftest.py  test_admin_regression.py  test_design_regression.py  test_order_regression.py
tshirt_fulfillment/tests/unit/repositories/: test_order_repository.py
tshirt_fulfillment/tests/unit/use_cases/: test_agent_service.py  test_design_generator.py  test_order_processor.py
